introduction into responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head>
 
-<body> </body>
+<body>
+    <div class="row">
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+    </div>
+    <div class="row">
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+        <div class="col col-1"></div>
+    </div>
+</body>
 
 </html>
